@@ -11,6 +11,8 @@
       editing views
     * FIX: Fixed login redirection problem after relogging
     * Filter for times now accept ranges (from ... until)
+    * New view setting for page header: repeat. This repeats the
+      column headers every 20'th row.
 
     Checks & Agents:
     * FIX: Made logwatch parsing mechanism a little more robust
